--- a/food_menu_app/food/templates/food/index.html
+++ b/food_menu_app/food/templates/food/index.html
@@ -2,7 +2,7 @@
 
 <ul>
     <li>
-        <a href="{% url 'detail' item.id %}">{{ item.id }} -- {{ item.item_name }}</a>
+        <a href="{% url 'food:detail' item.id %}">{{ item.id }} -- {{ item.item_name }}</a>
         
     </li>
 </ul>
