--- a/food_menu_app/food/templates/food/index.html
+++ b/food_menu_app/food/templates/food/index.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% extends 'food/base.html' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,18 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="{% static 'food/style.css' %}">
 </head>
 <body>
+{% block body %}
     {% for item in item_list %}
 
-<ul>
-    <li>
-        <a href="{% url 'food:detail' item.id %}">{{ item.id }} -- {{ item.item_name }}</a>
-        
-    </li>
-</ul>
+    <ul>
+        <li>
+            <a href="{% url 'food:detail' item.id %}">{{ item.id }} -- {{ item.item_name }}</a>
+            
+        </li>
+    </ul>
 
-{% endfor %}
+    {% endfor %}
+{% endblock %}
 </body>
 </html>
