Added img field with Default value in item model

--- a/food_menu_app/food/templates/food/index.html
+++ b/food_menu_app/food/templates/food/index.html
@@ -8,17 +8,25 @@
     <title>Document</title>
 </head>
 <body>
-{% block body %}
-    {% for item in item_list %}
+    {% block body %}
+        {% for item in item_list %}
+            <div class ="row">
+                <div class ="col-md-3 offset-md-2">
+                    <img class="img-thumbnail" src="{{item.item_image}}">
+                </div>
+                <div class="col-md-4">
+                    <h3>{{ item.item_name }}</h3>
+                    <h5>{{ item.item_desc }}</h5>
+                    <h6>${{ item.item_price }}</h6>
+                </div>
+                <div class="col-md-2">
 
-    <ul>
-        <li>
-            <a href="{% url 'food:detail' item.id %}">{{ item.id }} -- {{ item.item_name }}</a>
-            
-        </li>
-    </ul>
+                </div>
 
-    {% endfor %}
-{% endblock %}
+            </div>
+        {% endfor %}
+    {% endblock %}
+
+
 </body>
 </html>
