Added detail view with images n bootstrap

--- a/food_menu_app/food/templates/food/base.html
+++ b/food_menu_app/food/templates/food/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Document</title>
+    <title>FoodApp</title>
     <!-- Inbuilt -->
     <link rel="stylesheet" href="{% static 'food/style.css' %}">
     <!-- Bootstrap -->
