--- a/food_menu_app/food/templates/food/detail.html
+++ b/food_menu_app/food/templates/food/detail.html
@@ -1,6 +1,17 @@
 {% extends 'food/base.html' %}
 {% block body %}
-<h1>{{ item.item_name }}</h1>
-<h2>{{ item.item_desc }}</h2>
-<h3>{{ item.item_price }}</h3>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <img class="img-thumbnail" src="{{ item.item_image }}">
+        </div>
+        <div class="col-md-6">
+            <h1>{{ item.item_name }}</h1>
+            <h2>{{ item.item_desc }}</h2>
+            <h3>${{ item.item_price }}</h3>
+        </div>
+
+    </div>
+</div>
+
 {% endblock %}
