--- a/food_menu_app/food/templates/food/index.html
+++ b/food_menu_app/food/templates/food/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FoodApp</title>
 </head>
 <body>
     {% block body %}
@@ -20,7 +20,7 @@
                     <h6>${{ item.item_price }}</h6>
                 </div>
                 <div class="col-md-2">
-
+                    <a href="{% url 'food:detail' item.id %}" class="btn btn-success">Details</a>
                 </div>
 
             </div>
