--- a/food_menu_app/food/templates/food/base.html
+++ b/food_menu_app/food/templates/food/base.html
@@ -19,7 +19,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Add Item</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'food:create_item' %}">Add Item</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Delete Item</a>
