--- a/food_menu_app/food/templates/food/detail.html
+++ b/food_menu_app/food/templates/food/detail.html
@@ -9,6 +9,8 @@
             <h1>{{ item.item_name }}</h1>
             <h2>{{ item.item_desc }}</h2>
             <h3>${{ item.item_price }}</h3>
+            <a href="{% url 'food:delete_item' item.id %}">Delete</a>
+            <a href="{% url 'food:update_item' item.id %}">Update</a>
         </div>
 
     </div>
