--- a/food_menu_app/food/templates/food/base.html
+++ b/food_menu_app/food/templates/food/base.html
@@ -28,6 +28,14 @@
         </div>
     </div>
   </nav>
+    {% if messages %}
+      {% for message in messages %}
+      <div class="alert alert-{{message.tags}}">
+        {{message}}
+      </div>
+        
+      {% endfor %}
+    {% endif%}
     {% block body %}
     {% endblock %}
 </body>
