--- a/food_menu_app/food/templates/food/base.html
+++ b/food_menu_app/food/templates/food/base.html
@@ -24,9 +24,13 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">View Item</a>
               </li>
+              
               {% if user.is_authenticated %}
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{% url 'logout' %}">Logout</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'profile' %}">Profile</a>
               </li>
               {% else %}
               <li class="nav-item">
